[gd_scene load_steps=6 format=3 uid="uid://b1yg145rjjukt"]

[ext_resource type="Script" uid="uid://det86q5b5770u" path="res://Scripts/Obstacles/traps/surprise_trap.gd" id="1_emmqd"]
[ext_resource type="Texture2D" uid="uid://dmh6mwqb2f484" path="res://Assets/traps/surprise trap.png" id="2_w414s"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ex816"]
size = Vector2(65, 33.5)

[sub_resource type="Animation" id="Animation_040h8"]
resource_name = "attack"
length = 0.15
step = 0.03
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.030303, 0.0606061, 0.0909091, 0.121212),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xclua"]
_data = {
&"attack": SubResource("Animation_040h8")
}

[node name="SurpriseTrap" type="Area2D"]
collision_layer = 16
collision_mask = 257
script = ExtResource("1_emmqd")
attackAnimation = "attack"
stopAnimation = "stop"
amountX = 1.0
amountY = -121.0
shakeTime = 0.1
playerGroup = "Player"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -7.25)
shape = SubResource("RectangleShape2D_ex816")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -23)
texture = ExtResource("2_w414s")
hframes = 2
vframes = 3
frame = 4
region_rect = Rect2(0, 156, 60, 39)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xclua")
}

[node name="animation_start_timer" type="Timer" parent="."]
one_shot = true

[node name="animation_stop_timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="player_enter_to_trap"]
[connection signal="body_exited" from="." to="." method="player_exited_the_trap"]
[connection signal="timeout" from="animation_start_timer" to="." method="_on_animation_start_timer_timeout"]
[connection signal="timeout" from="animation_stop_timer" to="." method="_on_animation_stop_timer_timeout"]
